--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -60,6 +60,7 @@
     <string name="from_unit_short">km/h</string>
     <string name="fund"/>
     <string name="fund_loan"/>
+    <string name="home_title_calculator">Calculator</string>
     <string name="income_type"/>
  <string name="item_title_aa_payment">Defalcare factură</string>
     <string name="item_title_area_conversion">Arie</string>
@@ -150,11 +151,13 @@
     <string name="tanDesc">tangentă</string>
     <string name="tax_accumulation_fund">Fond de acumulare</string>
   <string name="tax_annual_bonus_hint">Introduceți bonusul înainte de impozitare</string>
+    <string name="tax_annual_bonus_number">Bonus</string>
     <string name="tax_birth">Data nașterii</string>
     <string name="tax_cal_method_annual">Calcularea bonusului anual</string>
     <string name="tax_cal_method_fixed_salary">Calcularea impozitului pe profit</string>
   <string name="tax_cal_method_format">Personal input: %s</string>
     <string name="tax_city">Orașul</string>
+    <string name="tax_city_error">Introduceți numele corect al orașului</string>
     <string name="tax_city_located">Locația</string>
     <string name="tax_city_picker">Orașul</string>
     <string name="tax_edittext_hint"/>
@@ -170,6 +173,8 @@
     <string name="tax_individual_income_tax_result">Rezultat</string>
     <string name="tax_injury">Accident</string>
     <string name="tax_insurance_and_fund">Asigurare</string>
+    <string name="tax_last_salary_hint">Introduceți venitul dumneavoastră</string>
+    <string name="tax_last_salary_number">Venit</string>
     <string name="tax_medical">Medicală</string>
     <string name="tax_param_error">Introduceți corect primele de asigurare</string>
     <string name="tax_result_real_get">După impozitare</string>
@@ -259,7 +264,7 @@
     <string name="unit_data_display_velocity_mps">Metri pe secundă</string>
     <string name="unit_data_display_velocity_nmiph">Knot</string>
     <string name="unit_data_display_volume_cl">Centilitru</string>
-  <string name="unit_data_display_volume_cu.af">Acre foot</string>
+  <string name="unit_data_display_volume_cu.af">Acre-foot</string>
     <string name="unit_data_display_volume_cu.cm">Centimetru cub</string>
     <string name="unit_data_display_volume_cu.dm">Decimetru cub</string>
     <string name="unit_data_display_volume_cu.ft">Picior la cub</string>
@@ -364,25 +369,25 @@
     <string name="unit_year_format">An %s</string>
     <string name="unit_yuan">CNY</string>
     <string name="wf_word_figure">Simboluri financiare</string>
-  <string name="word_figure_big_unit_fen">分</string>
-  <string name="word_figure_big_unit_jiao">角</string>
-  <string name="word_figure_big_unit_wan">万 </string>
-  <string name="word_figure_big_unit_yi">亿 </string>
-  <string name="word_figure_big_unit_zhao">兆 </string>
-  <string name="word_figure_number_0">零</string>
-  <string name="word_figure_number_1">壹</string>
-  <string name="word_figure_number_2">贰</string>
-  <string name="word_figure_number_3">叁</string>
-  <string name="word_figure_number_4">肆</string>
-  <string name="word_figure_number_5">伍</string>
-  <string name="word_figure_number_6">陆</string>
-  <string name="word_figure_number_7">柒</string>
-  <string name="word_figure_number_8">捌</string>
-  <string name="word_figure_number_9">玖</string>
-  <string name="word_figure_unit_bai">佰</string>
-  <string name="word_figure_unit_qian">仟</string>
-  <string name="word_figure_unit_shi">拾</string>
-  <string name="word_figure_yuan">元</string>
-  <string name="word_figure_zheng">整</string>
+  <string name="word_figure_big_unit_fen">punct</string>
+  <string name="word_figure_big_unit_jiao">unghi</string>
+  <string name="word_figure_big_unit_wan">"zece mii  "</string>
+  <string name="word_figure_big_unit_yi">"O sută de milioane "</string>
+  <string name="word_figure_big_unit_zhao">"trilion "</string>
+  <string name="word_figure_number_0">zero</string>
+  <string name="word_figure_number_1">unu</string>
+  <string name="word_figure_number_2">doi</string>
+  <string name="word_figure_number_3">trei</string>
+  <string name="word_figure_number_4">patru</string>
+  <string name="word_figure_number_5">cinci</string>
+  <string name="word_figure_number_6">șase</string>
+  <string name="word_figure_number_7">șapte</string>
+  <string name="word_figure_number_8">opt</string>
+  <string name="word_figure_number_9">nouă</string>
+  <string name="word_figure_unit_bai">Bai</string>
+  <string name="word_figure_unit_qian">mie</string>
+  <string name="word_figure_unit_shi">ridica</string>
+  <string name="word_figure_yuan">yuan</string>
+  <string name="word_figure_zheng">întreg</string>
     <string name="year"/>
 </resources>
