--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -119,7 +119,7 @@
     <string name="dialpad_seven">7</string>
     <string name="dialpad_six">6</string>
     <string name="dialpad_three">3</string>
-    <string name="dialpad_tuv">TUV</string>
+    <string name="dialpad_tuv">TȚUV</string>
     <string name="dialpad_two">2</string>
     <string name="dialpad_wxyz">WXYZ</string>
     <string name="dialpad_zero">0</string>
