--- a/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
+++ b/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
@@ -19,7 +19,7 @@ Pentru ştergerea istoricului din Browser, utilizaţi setările Browser-ului."</
     <string name="corpus_hint_apps">Căutare aplicaţii</string>
     <string name="corpus_label_apps">Aplicaţii</string>
     <string name="corpus_label_global">Tot</string>
-    <string name="corpus_label_web">Web</string>
+    <string name="corpus_label_web">Căutați aplicații, muzică, videoclipuri, Pagini Aurii, etc.</string>
     <string name="corpus_selection_heading">Căutare</string>
     <string name="cta_declaration">Această caracteristică trebuie să se conecteze la internet, să acceseze locația dispozitivului dvs. și să vizualizeze istoricul apelurilor și contactele pentru a funcţiona în mod normal.</string>
     <string name="cta_declaration_ignore">Nu se afișează din nou</string>
