--- a/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
@@ -110,7 +110,7 @@
     <string name="present_online_themes">Obțineți mai multe teme gratuit</string>
     <string name="provision_default_theme_title">Implicit</string>
     <string name="provision_loading_tips">Doar o secundă…</string>
-    <string name="provision_second_title">Selectați una din cele 5 teme implicite</string>
+    <string name="provision_second_title">Selectați una din cele câteva teme implicite</string>
     <string name="provision_title">Selectați o temă</string>
     <string name="purchased_list">Teme achiziționate</string>
     <string name="purchased_list_current">MIUI 8</string>
